--- a/SignIn/MPSignStyle.css
+++ b/SignIn/MPSignStyle.css
@@ -9,7 +9,7 @@ html{
 }
 body{
     min-height: 100vh;
-    background-image:url(/SignIn/Images/signinback.jpeg);
+    background-image:url(Images/signinback.jpeg);
     background-size: cover;
     overflow: hidden;
 }
