--- a/Hangman/hangman.css
+++ b/Hangman/hangman.css
@@ -1,5 +1,5 @@
 /*
-<This is the style.css file for MiniPlay that styles the main page using CSS.>
+<This is the hangman.css file for MiniPlay that styles the hangman page using CSS.>
     Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
