--- a/SignIn/MPSignStyle.css
+++ b/SignIn/MPSignStyle.css
@@ -1,5 +1,5 @@
 /*
-<This is the style.css file for MiniPlay that styles the main page using CSS.>
+<This is the MPSignStyle.css file for MiniPlay that styles the main page for signed in users using CSS.>
     Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
