--- a/TicTacToe/tictactoe.css
+++ b/TicTacToe/tictactoe.css
@@ -1,5 +1,5 @@
 /*
-<This is the style.css file for MiniPlay that styles the main page using CSS.>
+<This is the tictactoe.css file for MiniPlay that styles tic-tac-toe using CSS.>
     Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
